--- a/grid.html
+++ b/grid.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="grid.css" />
     <title>CSS Grid Layout</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+        <div class="top-container">
+            <div class="box-a"> a </div>
+            <div class="box-b"> b </div>
+        </div>           
+      <div class="bottom-container">
+        <div class="box-c"> c </div>
+        <div class="bottom-right-container">
+            <div class="box-d"> d </div>
+        <div class="box-e"> e </div>
+        </div>
+        
+    </div>
+  </body>
 </html>
