--- a/index.html
+++ b/index.html
@@ -6,32 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Flexbox Layout</title>
     <link rel="stylesheet" href="flex.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="sedans">
-      <img src="" alt="small car" />
-      <h2>SEDANS</h2>
-      <p>
-        Choose a sedan for its affordability and excellent fuel economy.Ideal
-        for cruising in the city or on your next road trip.
-      </p>
-      <button>Learn More</button>
-    </div>
-    <div class="suvs">
-      <h2>SUVS</h2>
-      <p>
-        Take an SUV for its spacious interior, power, and versatility. Perfect
-        for your next family vacation and off-road adventures.
-      </p>
-      <button>Learn More</button>
-    </div>
-    <div class="luxury">
-      <h2>LUXURY</h2>
-      <p>
-        Cruise in the best car brands without bloated prices. Enjoy the enhanced
-        comfort of a luxury rental and arrive in style.
-      </p>
-      <button>Learn More</button>
+    <div class="container">
+      <div class="sedans">
+        <div class="image"><img src="icon-sedans.svg" alt="small car" /></div>
+        <h2>SEDANS</h2>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy.Ideal
+          for cruising in the city or on your next road trip.
+        </p>
+        <button class="btn sedan">Learn More</button>
+      </div>
+      <div class="suvs">
+        <div class="image"><img src="icon-suvs.svg" alt="suv img" /></div>
+        <h2>SUVS</h2>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect
+          for your next family vacation and off-road adventures.
+        </p>
+        <button class="btn suv">Learn More</button>
+      </div>
+      <div class="luxury">
+        <div class="image"><img src="icon-luxury.svg" alt="luxury" /></div>
+        <h2>LUXURY</h2>
+        <p>
+          Cruise in the best car brands without bloated prices. Enjoy the
+          enhanced comfort of a luxury rental and arrive in style.
+        </p>
+        <button class="btn lx">Learn More</button>
+      </div>
     </div>
   </body>
 </html>
