used template areas

--- a/grid.html
+++ b/grid.html
@@ -8,18 +8,14 @@
     <title>CSS Grid Layout</title>
   </head>
   <body>
-    <div class="container">
-        <div class="top-container">
-            <div class="box-a"> a </div>
-            <div class="box-b"> b </div>
-        </div>           
-      <div class="bottom-container">
-        <div class="box-c"> c </div>
-        <div class="bottom-right-container">
-            <div class="box-d"> d </div>
-        <div class="box-e"> e </div>
-        </div>
-        
-    </div>
+    <main>
+      <div class="container">
+        <div class="box-a"></div>
+        <div class="box-b"></div>
+        <div class="box-c"></div>
+        <div class="box-d"></div>
+        <div class="box-e"></div>
+      </div>
+    </main>
   </body>
 </html>
